[tool.poetry]
name = "PyMQL5"
version = "0.1.0"
description = "O PyMQL5 é uma API que realiza a conexão entre Python3 e o Metatrader5 através de socket UDP."
authors = ["Maikon Baggio <maiconbaggio@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaiconBaggio/PyMQL5"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
